<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_psg">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.itb.menulateral_3e_3f_2021.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.itb.menulateral_3e_3f_2021.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.itb.menulateral_3e_3f_2021.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_psg"
        android:name="br.com.itb.menulateral_3e_3f_2021.ui.login.LoginFragment"
        android:label="@string/menu_psg"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_psg_to_nav_registro"
            app:destination="@id/nav_registro" />
    </fragment>

    <fragment
        android:id="@+id/nav_registro"
        android:name="br.com.itb.menulateral_3e_3f_2021.RegistroFragment"
        android:label="@string/action_register"
        tools:layout="@layout/registro_fragment" />
</navigation>